fixed some minors issues
